--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /**/__pycache__
 tokenized_sentences_en.p
 tokenized_sentences_es.p
+dictionaries/word-level/2_grams_word_dict_en.csv
+dictionaries/word-level/2_grams_word_dict_es.csv
